--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "express": "~4.16.1",
     "express-session": "^1.16.2",
     "http": "0.0.0",
-    "http-errors": "~1.6.3",
+    "http-errors": "^1.6.3",
     "mongoose": "^5.6.3",
     "morgan": "~1.9.1",
     "node-dev": "^4.0.0",
